--- a/.env
+++ b/.env
@@ -7,11 +7,11 @@ APP_URL=http://localhost
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=sql9.freesqldatabase.com
 DB_PORT=3306
-DB_DATABASE=it4895
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=sql9368221
+DB_USERNAME=sql9368221
+DB_PASSWORD=LurjYANLKL
 
 BROADCAST_DRIVER=pusher
 CACHE_DRIVER=file
