--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "laravel/framework": "^7.0",
         "laravel/sanctum": "^2.6",
         "laravel/tinker": "^2.0",
-        "laravel/ui": "^2.4",
+        "laravel/ui": "2.4",
         "pusher/pusher-php-server": "~4.0"
     },
     "require-dev": {
