add comments, seeder, chats

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=0e74a59241aee1fce34e",
+    "/css/app.css": "/css/app.css?id=285bc4b1273162aedfc2"
 }
