--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "laravel/sanctum": "^2.6",
         "laravel/tinker": "^2.0",
         "laravel/ui": "2.4",
-        "pusher/pusher-php-server": "~4.0"
+        "pusher/pusher-php-server": "~4.0",
+      "ext-json": "*"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
