--- a/.env
+++ b/.env
@@ -6,6 +6,13 @@ APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 
+#DB_CONNECTION=mysql
+#DB_HOST=127.0.0.1
+#DB_PORT=3306
+#DB_DATABASE=it4895
+#DB_USERNAME=root
+#DB_PASSWORD=
+
 DB_CONNECTION=pgsql
 DB_HOST=ec2-3-210-255-177.compute-1.amazonaws.com
 DB_PORT=5432
