--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "laravel/tinker": "^2.0",
         "laravel/ui": "2.4",
         "pusher/pusher-php-server": "~4.0",
-      "ext-json": "*"
+      "ext-json": "*",
+      "ext-mysql_xdevapi": "*"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
